# cless

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  makefile  run.sh
include/: attacks.hpp  board.hpp  chess_types.hpp  converter.h  engine.hpp  ext_engine.hpp  game_logic.hpp  menu.h  menu.hpp  move_gen.hpp  popup.hpp  position.hpp  size_warning.hpp  tui_state.hpp  uci_interface.hpp  utils.hpp  win_handler.hpp
src/: attacks.cpp  board.c  board.cpp  board.h  board.hpp  common.h  converter.c  converter.h  engine.c  engine.cpp  engine.h  engine.hpp  ext_engine.cpp  game_logic.cpp  main.c  main.cpp  menu.c  menu.cpp  menu.h  menu.hpp  move_gen.cpp  popup.cpp  position.cpp  size_warning.cpp  size_warning.hpp  tui_handler.c  tui_handler.h  uci_interface.cpp  uci_main.cpp  utils.c  utils.cpp  utils.h  utils.hpp  win_handler.c  win_handler.cpp  win_handler.h  win_handler.hpp
tests/: engine.c  engine.cpp  perft_tests.cpp  test_converter.c  unique_moves.cpp
